# rplace

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: ejudge.rs  grid.rs  main.rs  tokendb.rs
static/: index.html
static/get_token/: index.html
