[package]
name = "rplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
memmap = "0.7.0"
anyhow = "1"
sled = "0.34.7"
rand = "0.8.5"
reqwest = "0.11.10"
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.1"
tokio = "1"
futures-util = "0.3.21"
